Add unique device id and peer cleanup on peer disconnect

--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "typescript": "3.7.5"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.0",
     "rpc-websockets": "^5.0.9",
+    "uuid": "^8.3.0",
     "webrtc-adapter": "^7.6.2"
   }
 }
