--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "SDK for Bandwidth WebRTC Browser Applications",
   "main": "dist/index.js",
   "scripts": {
-    "build": "rm -rf ./dist/* && prettier --check  . && ./node_modules/typescript/bin/tsc",
+    "build": "rm -rf ./dist/* && prettier --check  . && ./node_modules/typescript/bin/tsc && webpack",
     "test": "jest src --coverage",
     "test:debug": "node --inspect node_modules/.bin/jest --runInBand --coverage src",
     "preversion": "npm test",
@@ -28,11 +28,15 @@
     "@types/jest": "^25.1.2",
     "@types/node": "^13.5.1",
     "babel-jest": "^25.1.0",
+    "clean-webpack-plugin": "^3.0.0",
     "jest": "^25.1.0",
     "prettier": "^2.0.2",
+    "ts-loader": "^8.0.3",
     "ts-node": "8.6.2",
     "typedoc": "^0.16.9",
-    "typescript": "3.7.5"
+    "typescript": "3.7.5",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "@types/uuid": "^8.3.0",
