EDGE-585 Make unit tests run on any push for testing

--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -1,11 +1,7 @@
 name: Unit Tests
 
 on:
-  push:
-    branches:
-      - main
-      - master
-      - hotfix/*
+  push
 
 jobs:
   build-and-test:
