--- a/.github/workflows/release_publish.yml
+++ b/.github/workflows/release_publish.yml
@@ -12,8 +12,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-        with:
-          ref: refs/heads/master
       - name: Install Node.js
         uses: actions/setup-node@v1
         with:
@@ -24,6 +22,8 @@ jobs:
       - name: version and publish
         run: |
           export MAJOR_MINOR_SEMVER=${GITHUB_REF:11}
+          echo "MAJOR_MINOR_SEMVER=${MAJOR_MINOR_SEMVER}"
+
           git config user.name $GITHUB_ACTOR
           git config user.email gh-actions-${GITHUB_ACTOR}@github.com
           git remote add gh-origin https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
