EDGE-602 Build webpack bundle and automatically upload as Github release asset

--- a/.github/workflows/draft_release.yml
+++ b/.github/workflows/draft_release.yml
@@ -7,7 +7,7 @@ on:
       - master
 
 jobs:
-  deploy-staging:
+  draft-release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
