--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "@types/sdp-transform": "^2.4.4",
     "@types/uuid": "^8.3.0",
+    "async-mutex": "^0.3.1",
     "jwt-decode": "^3.1.2",
     "rpc-websockets": "^5.0.9",
     "sdp-transform": "^2.14.1",
