--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bandwidth/webrtc-browser",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "description": "SDK for Bandwidth WebRTC Browser Applications",
   "main": "dist/index.js",
   "scripts": {
@@ -40,8 +40,12 @@
     "webpack-merge": "^5.7.0"
   },
   "dependencies": {
+    "@types/sdp-transform": "^2.4.4",
     "@types/uuid": "^8.3.0",
+    "async-mutex": "^0.3.1",
+    "jwt-decode": "^3.1.2",
     "rpc-websockets": "^5.0.9",
+    "sdp-transform": "^2.14.1",
     "uuid": "^8.3.0",
     "webrtc-adapter": "^7.6.2"
   }
