--- a/.github/workflows/release_publish.yml
+++ b/.github/workflows/release_publish.yml
@@ -29,7 +29,7 @@ jobs:
           git remote add gh-origin https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
 
           npm version ${MAJOR_MINOR_SEMVER} --force -m "Bump version to %s"
-          git push gh-origin HEAD:master --tags
+          git push gh-origin --tags
 
           echo "//registry.npmjs.org/:_authToken=$NPM_API_TOKEN" >> ~/.npmrc
           npm publish --access public
