EDGE-1433.1 fix bug in github action

--- a/.github/workflows/release_publish.yml
+++ b/.github/workflows/release_publish.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm install
       - name: npm version and publish
         run: |
-          npm version $RELEASE_VERSION --no-git-tag-version
+          npm version ${{ github.event.release.tag_name }} --no-git-tag-version
           echo "//registry.npmjs.org/:_authToken=$NPM_API_TOKEN" >> ~/.npmrc
           npm publish --access public
         env:
